--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@antfu/eslint-config",
-  "version": "0.21.1",
+  "name": "@murong/eslint-config",
+  "version": "0.0.0",
   "description": "",
   "keywords": [],
   "license": "MIT",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "MuRong <admin@imuboy.cn> (https://github.com/murongg/)",
   "main": "index.js",
   "files": [
     "index.js"
@@ -13,8 +13,8 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "@antfu/eslint-config-react": "workspace:*",
-    "@antfu/eslint-config-vue": "workspace:*",
+    "@murong/eslint-config-react": "workspace:*",
+    "@murong/eslint-config-vue": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
