--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@antfu/eslint-config-react",
-  "version": "0.21.1",
+  "name": "@murong/eslint-config-react",
+  "version": "0.0.0",
   "description": "",
   "keywords": [],
   "license": "MIT",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "MuRong <admin@imuboy.cn> (https://github.com/murongg/)",
   "main": "index.js",
   "files": [
     "index.js"
@@ -19,7 +19,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@antfu/eslint-config-ts": "workspace:*",
+    "@murong/eslint-config-ts": "workspace:*",
     "eslint-plugin-react": "^7.29.4"
   },
   "devDependencies": {
