--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@antfu/eslint-config-ts",
-  "version": "0.21.1",
+  "name": "@murong/eslint-config-ts",
+  "version": "0.0.0",
   "description": "",
   "keywords": [],
   "license": "MIT",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "MuRong <admin@imuboy.cn> (https://github.com/murongg/)",
   "main": "index.js",
   "files": [
     "index.js"
@@ -17,7 +17,7 @@
     "typescript": ">=3.9"
   },
   "dependencies": {
-    "@antfu/eslint-config-basic": "workspace:*",
+    "@murong/eslint-config-basic": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0"
   },
