--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@antfu/eslint-config-vue",
-  "version": "0.21.1",
+  "name": "@murong/eslint-config-vue",
+  "version": "0.0.0",
   "description": "",
   "keywords": [],
   "license": "MIT",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "author": "MuRong <admin@imuboy.cn> (https://github.com/murongg/)",
   "main": "index.js",
   "files": [
     "index.js"
@@ -16,7 +16,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@antfu/eslint-config-ts": "workspace:*",
+    "@murong/eslint-config-ts": "workspace:*",
     "eslint-plugin-vue": "^8.7.1"
   },
   "devDependencies": {
