--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@murong/eslint-config-monorepo",
+  "name": "@murongg/eslint-config-monorepo",
   "version": "0.0.1",
   "private": true,
   "license": "MIT",
@@ -10,7 +10,7 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@murong/eslint-config": "*",
+    "@murongg/eslint-config": "*",
     "bumpp": "^7.1.1",
     "eslint": "^8.14.0",
     "eslint-plugin-murong": "workspace:*",
