--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@murong/eslint-config-ts",
+  "name": "@murongg/eslint-config-ts",
   "version": "0.0.1",
   "description": "",
   "keywords": [],
@@ -17,7 +17,7 @@
     "typescript": ">=3.9"
   },
   "dependencies": {
-    "@murong/eslint-config-basic": "workspace:*",
+    "@murongg/eslint-config-basic": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0"
   },
