--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@murong/eslint-config-vue",
+  "name": "@murongg/eslint-config-vue",
   "version": "0.0.1",
   "description": "",
   "keywords": [],
@@ -16,7 +16,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@murong/eslint-config-ts": "workspace:*",
+    "@murongg/eslint-config-ts": "workspace:*",
     "eslint-plugin-vue": "^8.7.1"
   },
   "devDependencies": {
